chapter-08-api-gateway/api/deployment/api.yaml
kind: Service
apiVersion: v1
metadata:
  name: minimalapi-svc
spec:
  selector:
    app: minimalapi
  ports:
  - name: http
    protocol: "TCP"
    port: 8000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minimalapi
  labels:
    app: minimalapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minimalapi
  template:
    metadata:
      labels:
        app: minimalapi
    spec:
      containers:
      - name: minimalapi
        image: minimalapi:1.0.0
