chapter-08-api-gateway/api/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimalapi-ingress
  annotations:
    konghq.com/plugins: phantom-token
spec:
  ingressClassName: kong
  rules:
    - host: api.examplecluster.com
      http:
        paths:
          - path: /minimalapi
            pathType: Prefix
            backend:
              service:
                name: minimalapi-svc
                port:
                  number: 8000
